--- a/_includes/head.html
+++ b/_includes/head.html
@@ -6,8 +6,8 @@
 
 	<title class="pageTitle">{{ site.page_title }}</title>
 	<meta name="description" content="{{ site.app_description }}">
-
 	<link rel="shortcut icon" href="{{ site.app_icon | relative_url }}">
+	<link rel="alternate" type="application/atom+xml" title="{{ site.page_title }}" href="/feed.xml">
 
 	<!-- Smart App Banner -->
 	{% if site.enable_smart_app_banner %}
