--- a/_sass/layout.scss
+++ b/_sass/layout.scss
@@ -1,18 +1,15 @@
 .imageWrapper {					// Sets the background image in the header area
 	height: 714px;
-	background: 
+	background:
 		linear-gradient(
-		rgba($image-overlay-color, $image-overlay-transparency), 
-		rgba($image-overlay-color, $image-overlay-transparency)
-		   ),
-		
+			rgba($image-overlay-color, $image-overlay-transparency),
+			rgba($image-overlay-color, $image-overlay-transparency)
+		),
 		url($header-image);
-
 	background-repeat: no-repeat;
 	background-size: cover;
 	background-position: top;
 	border-radius: 0px 0px 40px 40px;
-
 }
 
 .headerBackground {
@@ -21,11 +18,9 @@
 }
 
 @media only screen and (max-width: 768px) {
-
 	.headerBackground {
 		height: 80px;
 	}
-
 }
 
 .subPageHeaderBackground {
@@ -41,7 +36,7 @@
 	grid-template-columns: repeat(12, 1fr);
 	grid-template-rows: 115px 876px auto auto;
 	grid-column-gap: 30px;
-	grid-template-areas: 
+	grid-template-areas:
 		"h h h h h h h h h h h h"
 		"p p p p p i i i i i i i"
 		"c c c c c c c c c c c c"
@@ -54,19 +49,17 @@
 }
 
 @media only screen and (max-width: 768px) {
-
 	.container {					// Set up the container for the site content
 		grid-template-rows: 80px 811px auto auto;
 	}
 }
 
 @media only screen and (max-width: 992px) {
-
 	.container {
 		grid-column-gap: 0px;
 		grid-template-columns: 1;
 		grid-template-rows: 115px auto auto auto auto;
-		grid-template-areas: 
+		grid-template-areas:
 			"h h h h h h h h h h h h"
 			"i i i i i i i i i i i i"
 			"p p p p p p p p p p p p"
@@ -82,14 +75,26 @@
 }
 
 @media only screen and (max-width: 768px) {
-
 	.page {
 		margin-top: 30px;
 		margin-bottom: 70px;
 		grid-column: 1/-1;
 	}
-	
-} 
+}
+
+.post {
+	margin-top: 30px;
+	margin-bottom: 70px;
+	grid-column: 3/11;
+}
+
+@media only screen and (max-width: 768px) {
+	.post {
+		margin-top: 30px;
+		margin-bottom: 70px;
+		grid-column: 1/-1;
+	}
+}
 
 header {
 	grid-area: h;
@@ -114,17 +119,14 @@ header {
 }
 
 @media only screen and (max-width: 768px) {
-
 	.logo {
 		height: 80px;
 		margin-right: 0px;
 	}
-
 	.logo > p {
 		display: none;
 	}
-	
-} 
+}
 
 .headerIcon {
 	width: 50px;
@@ -134,7 +136,6 @@ header {
 }
 
 @media only screen and (max-width: 768px) {
-
 	.divider {
 		position: relative;
 		min-width: 1px;
@@ -142,10 +143,8 @@ header {
 		background-color:rgba(127, 127, 127, 0.2);
 		display: inline-block;
 		margin-left: 15px;
-	}	
-	
-} 
-
+	}
+}
 
 // Navigation Links
 .scroll {
@@ -165,27 +164,23 @@ header {
 }
 
 @media only screen and (max-width: 768px) {
-
 	.scroll {
 		height: 80px;
 		padding-top: 100px;
 		padding-bottom: 100px;
 		margin-top: -60px;
 		justify-content: flex-start;
-	}	
-	
-} 
+	}
+}
 
 .scroll::-webkit-scrollbar {
 	display: none;
 }
 
-
 nav > ul {
 	color: #fff;
 	display: flex;
 	list-style-type: none;
-
 }
 
 nav > ul li {
@@ -193,11 +188,9 @@ nav > ul li {
 }
 
 @media only screen and (max-width: 768px) {
-
 	nav > ul li {
 		padding-left: 20px;
 	}
-
 }
 
 nav > ul li:first-child {
@@ -221,8 +214,6 @@ nav > ul li a:active {
 	color: rgba($header-title-color, 1);
 }
 
-
-
 // Sub Page Header Styling
 .subPageHeaderBackground .logo > p {
 	color: #000;
@@ -238,8 +229,6 @@ nav > ul li a:active {
 	color: rgba(#000, 1);
 }
 
-
-
 // App Title, Price, Description and Links
 
 .appInfo {
@@ -251,13 +240,11 @@ nav > ul li a:active {
 }
 
 @media only screen and (max-width: 992px) {
-
 	.appInfo {
 		padding-top: 50px;
 		justify-content: center;
 	}
-
-} 
+}
 
 .appIconShadow {
 	display: flex;
@@ -291,25 +278,21 @@ nav > ul li a:active {
 }
 
 @media only screen and (max-width: 768px) {
-
 	.appNamePriceContainer {
 		width: 100%;
 		margin-left: 0px;
 		align-items: center;
 		justify-content: center;
 	}
-
 	.appName {
 		margin-top: 30px;
 		text-align: center;
 	}
-	
 	.appPrice {
 		margin-top: 13px;
 		text-align: center;
 	}
-	
-} 
+}
 
 .appDescriptionContainer {
 	font-size: 2.5rem;
@@ -326,12 +309,10 @@ nav > ul li a:active {
 }
 
 @media only screen and (max-width: 992px) {
-
 	.appDescription {
 		text-align: center;
 	}
-	
-} 
+}
 
 .downloadButtonsContainer {
 	display: inline-block;
@@ -340,12 +321,10 @@ nav > ul li a:active {
 }
 
 @media only screen and (max-width: 992px) {
-
 	.downloadButtonsContainer {
 		text-align: center;
 	}
-	
-} 
+}
 
 .playStore {
 	height: 75px;
@@ -353,28 +332,22 @@ nav > ul li a:active {
 }
 
 @media only screen and (max-width: 992px) {
-
 	.playStore {
 		margin-right: 24px;
 		margin-bottom: 0px;
 	}
-	
-} 
+}
 
 @media only screen and (max-width: 528px) {
-
 	.playStore {
 		margin-right: 0px;
 		margin-bottom: 24px;
 	}
-	
-} 
+}
 
 .appStore {
 	height: 75px;
 }
-
-
 
 // iPhone Device Preview
 
@@ -409,33 +382,27 @@ nav > ul li a:active {
 }
 
 @media only screen and (max-width: 1070px) {
-
 	.iphonePreview {
 		background-size: 370px auto;
 	}
-
 	.iphoneScreen {
 		width: 322px;
 		margin-left: 24px;
 		margin-top: 22px;
 	}
-
 	.videoContainer {
 		width: 322px;
 		height: 698px;
 		margin-left: 24px;
 		margin-top: 22px;
 	}
-	
 	.videoContainer > video {
 		width: 322px;
 		height: 698px;
 	}
-	
-} 
+}
 
 @media only screen and (max-width: 992px) {
-
 	.iphonePreview {
 		display: flex;
 		background-size: 260px auto;
@@ -444,7 +411,6 @@ nav > ul li a:active {
 		justify-content: center;
 		padding-bottom: 75px;
 	}
-
 	.iphoneScreen {
 		width: 226px;
 		height: 488px;
@@ -453,21 +419,17 @@ nav > ul li a:active {
 		margin: 0px;
 		margin-top: 17px;
 	}
-
 	.videoContainer {
 		width: 226px;
 		height: 488px;
 		margin-left: 0px;
 		margin-top: 17px;
 	}
-
 	.videoContainer > video {
 		width: 226px;
 		height: 488px;
 	}
-	
-} 
-
+}
 
 // Feature List
 
@@ -491,7 +453,7 @@ nav > ul li a:active {
 }
 
 .feature:nth-child(-n+3) {
-    padding-top: 0px;   
+	padding-top: 0px;
 }
 
 .feature:nth-child(3n) {
@@ -533,14 +495,12 @@ nav > ul li a:active {
 }
 
 @media only screen and (max-width: 992px) {
-
 	.features {
 		flex-grow: 1;
 		flex-direction: row;
 		flex-wrap: wrap;
 		margin-top: 11px;
 	}
-
 	.feature {
 		display: flex;
 		padding-top: 41px;
@@ -548,34 +508,27 @@ nav > ul li a:active {
 		padding-right: 15px;
 		width: 100%;
 	}
-
 	.feature:nth-child(-n+3) {
-		padding-top: 41px;   
+		padding-top: 41px;
 	}
-
 	.feature:nth-child(1) {
-		padding-top: 0px;   
+		padding-top: 0px;
 	}
-
 	.feature:nth-child(3n) {
 		padding-right: 15px;
 	}
-	
 	.feature:nth-child(3n+1) {
 		padding-left: 15px;
 	}
-	
 }
 
 @media only screen and (max-width: 375px) {
-
 	.features {
 		flex-grow: 1;
 		flex-direction: row;
 		flex-wrap: wrap;
 		margin-top: 11px;
 	}
-
 	.feature {
 		display: flex;
 		padding-top: 41px;
@@ -583,26 +536,19 @@ nav > ul li a:active {
 		padding-right: 0px;
 		width: 100%;
 	}
-
 	.feature:nth-child(-n+3) {
-		padding-top: 41px;   
+		padding-top: 41px;
 	}
-
 	.feature:nth-child(1) {
-		padding-top: 0px;   
+		padding-top: 0px;
 	}
-
 	.feature:nth-child(3n) {
 		padding-right: 0px;
 	}
-	
 	.feature:nth-child(3n+1) {
 		padding-left: 0px;
 	}
-	
-} 
-
-
+}
 
 // Footer
 
@@ -646,25 +592,20 @@ footer {
 
 
 @media only screen and (max-width: 768px) {
-
 	.footerLinks {
 		flex-direction: column;
 	}
-
 	.footerLinks a {
 		justify-content: stretch;
 		margin-right: 0px;
 		margin-top: 20px;
 	}
-
 	.footerLinks a:first-child {
 		margin-top: 0px;
-	}	
-
+	}
 }
 
 @media only screen and (max-width: 992px) {
-	
 	.footerText {
 		color: $footer-text-color;
 		display: block;
@@ -674,13 +615,11 @@ footer {
 		padding-top: 54px;
 		padding-bottom: 61px;
 	}
-	
 	.footerIcons {
 		padding-bottom: 70px;
 		display: flex;
 	}
-	
-} 
+}
 
 .hidden {
 	display: none;
